3단계 - 사다리(게임 실행) (#2276)
* feat : 추가 기능목록 작성

* docs : 추가 기능목록 작성

* feat : 사다리의 입력을 ,로 분리 기능 구현

* feat : 결과가 사용자의 수와 같아야하는 검증 기능 구현

* docs : 추가 기능요구사항 추가

* feat : 위치 이동기능 구현

* docs : 추가 기능 목록 작성

* feat : 이동 위치가 존재하지 않으면 예외 발생기능 구현

* feat : boolean값 Point로 변환하는 기능 구현

* docs : 추가 요구사항 작성

* refactor : Point class 이름 명시적으로 변경

* refactor : 생성기를 이용한 생성 책임 이동

* refactor : 생성기 시그니처 변경

* refactor : 래더변환 기능 helper class로 이동

* refactor : RandomNonConsecutiveFlagGenerator 시그니처 변경에 따른 변경

* refactor : 함수명 명시적으로 변경

* feat : 각라인의 이동결과를 반환기능 구현

* feat : 사다리 최종결과 반환 기능 구현

* refactor : position 자료구조 변경

* feat : 최종결과 반환 기능 구현

* docs : 추가 기능 요구사항 구현

* refactor : 필요없는 클래스 합병 및 검증기능 분리

* docs : 완성된 기능 완료처리

* feat : 결과 입력 기능 구현

* feat : 사다리의 최종결과를 출력하는 기능 구현

* docs : 추가 요구사항 작성

* feat : 사용자 이름 입력 기능 구현

* feat : 결과 출력 기능 구현

* docs : 추가 기능 목록 작성

* feat : 찾는 사용자가 없을 시 확인하는 기능구현

* refactor : 네이밍 개선

* refactor : 가변객채를 불변객체로 변경

* refactor : 생성자 체인 구조로 변경

* refactor : 가변인자 생성자 추가

* chore : 함수명 대문자 시작을 소문자로 변경

* refactor : Lines 생성 기능 분리

* feat : width 검증 기능 구현